Fixed alignment, spacing, and flexibility

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
   padding: 2rem;
-  text-align: center;
 }
+
 /* #root {
   flex-grow: 1;
   display: flex;
