--- a/src/components/ui/Box.css
+++ b/src/components/ui/Box.css
@@ -7,25 +7,29 @@
 }
 
 .medium-box {
+    flex: 4;
     border: 2px solid #aaa;
     border-radius: 5px;
     padding: 1rem;
     background-color: #f9f9f9;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
-    margin-top: 1rem; /* Add some space above */
-    width: 70%; /* Or any specific width */
-    max-width: 2000px;
-    min-width: 800px;
+    margin-top: 1rem;
+    width: 100%;
+    max-width: 1280px;
     box-sizing: border-box;
 }
 
 .small-box {
+    flex: 1;
     border: 2px solid #aaa;
     border-radius: 5px;
     padding: 1rem;
     background-color: #f9f9f9;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
-    margin-top: 1rem; /* Add some space above */
-    min-height: 200px;
-    width: 200px; /* Or any specific width */
+    margin-top: 1rem; 
+}
+
+.small-box,
+.medium-box {
+    margin: 0;
 }
